# gubs

./: gubs.cabal  stack.yaml
examples/: rwalk.cs
gubs/: Main.hs
src/GUBS/: Algebra.hs  ConstraintSystem.hs  Expression.hs  Interpretation.hs  MaxPolynomial.hs  MaxTerm.hs  Natural.hs  Polynomial.hs  Rat.hs  Solve.hs  Solver.hs  Strategy.hs  Term.hs  Utils.hs
src/GUBS/Natural/: Constraint.hs  ConstraintSystem.hs  Interpretation.hs  Solve.hs  Strategy.hs
src/GUBS/Natural/Solve/: Encoding.hs  SCC.hs  Simplify.hs
src/GUBS/Rational/: Solve.hs
src/GUBS/Solve/: SCC.hs  SMT.hs  Simplify.hs  Strategy.hs
src/GUBS/Solver/: Class.hs  Formula.hs  MiniSMT.hs  SMTLib.hs  SMTLib2.hs  Script.hs  ZThree.hs
src/GUBS/Solver/SMTLib2/: Pipe.hs
