name:                gubs
synopsis:            arithmetic constraint solver
version:             0.4.0.0
license:             MIT
license-file:        LICENSE
author:              Martin Avanzini
maintainer:          martin.avanzini@inria.fr and michael.schaper@uibk.ac.at
build-type:          Simple
cabal-version:       >=1.10

Flag Z3
  Description: Compile with Z3 native bindings.
  Default: False

library
  exposed-modules:
    GUBS.Algebra
    GUBS.Interpretation
    GUBS.MaxPolynomial
    GUBS.MaxTerm
    GUBS.Natural.Constraint
    GUBS.Natural.ConstraintSystem
    GUBS.Natural.Interpretation
    GUBS.Natural.Solve
    GUBS.Natural.Solve.Encoding
    GUBS.Natural.Solve.SCC
    GUBS.Natural.Solve.Simplify
    GUBS.Natural.Strategy
    GUBS.Polynomial
    GUBS.Rational.Solve
    GUBS.Solver
    GUBS.Solver.Class
    GUBS.Solver.Formula
    GUBS.Solver.MiniSMT
    GUBS.Solver.SMTLib2
    GUBS.Solver.Script
    GUBS.Strategy
    GUBS.Utils
  build-depends:
    base,
    containers,
    mtl,
    monad-trace,
    bytestring,
    process,
    temporary,
    ansi-wl-pprint,
    time,
    parsec,
    multiset,
    typed-process

  hs-source-dirs:   src
  default-language: Haskell2010
  other-extensions:
  default-extensions:
    ConstraintKinds
    CPP
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    PatternGuards
    PatternSynonyms
    RecordWildCards
    StandaloneDeriving
    TupleSections
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -fno-warn-orphans
  if flag(Z3)
    exposed-modules: GUBS.Solver.ZThree
    build-depends:   z3
    extra-libraries: z3
    cpp-options:     -DWithZ3

executable gubs
  hs-source-dirs:   gubs
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
    gubs,
    base,
    mtl,
    containers,
    ansi-wl-pprint,
    cmdargs
  ghc-options:
    -threaded -Wall -fno-warn-orphans -O2

